<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (c) 2013 Kevin Hunter
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 * http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<resources>

    <string name="app_name">ThemingActionBar</string>
    <string name="tab1">Tab 1</string>
    <string name="tab2">Tab 2</string>
    <string name="tab3">Tab 3</string>
    <string name="tab4">Tab 4</string>
    <string name="tab5">Tab 5</string>
    <string name="tab6">Tab 6</string>
    <string name="tab7">Tab 7</string>
    <string name="tab8">Tab 8</string>
    <string name="tab9">Tab 9</string>
    <string name="fewtabs">Few Tabs</string>
    <string name="manytabs">Many Tabs</string>
    <string name="pulldown">Pull-down</string>
    <string name="menu">Menu</string>
    <string name="split">Split Menu</string>
    <string name="menu1">Menu 1</string>
    <string name="menu2">Menu 2</string>
    <string name="menu3">Menu 3</string>
    <string name="menu4">Menu 4</string>
    <string name="menu5">Menu 5</string>
    <string name="menu6">Menu 6</string>
    <string name="menu7">Menu 7</string>

</resources>