<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (c) 2013 Kevin Hunter
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 * http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_one"
        android:showAsAction="ifRoom"
        android:title="@string/menu1"/>
    <item
        android:id="@+id/menu_two"
        android:showAsAction="ifRoom"
        android:title="@string/menu2"/>
    <item
        android:id="@+id/menu_three"
        android:showAsAction="ifRoom"
        android:title="@string/menu3"/>
    <item
        android:id="@+id/menu_four"
        android:showAsAction="ifRoom"
        android:title="@string/menu4"/>
    <item
        android:id="@+id/menu_five"
        android:showAsAction="ifRoom"
        android:title="@string/menu5"/>
    <item
        android:id="@+id/menu_six"
        android:showAsAction="ifRoom"
        android:title="@string/menu6"/>
    <item
        android:id="@+id/menu_seven"
        android:showAsAction="ifRoom"
        android:title="@string/menu7"/>

</menu>